--- a/client/src/components/header/Header.scss
+++ b/client/src/components/header/Header.scss
@@ -10,6 +10,11 @@
         padding: 0;
         margin: 0;
         cursor: pointer;
+        &:hover,
+        &:focus {
+            color: darkred;
+            text-shadow: 0 0 1px darkred;
+        }
     }
     .toggle-note-list {
         margin-right: 0.5em;
@@ -20,6 +25,26 @@
         }
     }
     .toggle-editor-size {
+    }
+    .new-note {
+        white-space: nowrap;
+        margin-left: 1em;
+        button {
+            font-weight: bold;
+            svg {
+                margin-right: 0.5em;
+            }
+        }
+    }
+    .delete-note {
+        white-space: nowrap;
+        margin-left: 1em;
+        button {
+            font-weight: bold;
+            svg {
+                margin-right: 0.5em;
+            }
+        }
     }
     .log-out {
         margin-left: auto;
