--- a/client/src/components/note-list/NoteList.scss
+++ b/client/src/components/note-list/NoteList.scss
@@ -43,20 +43,40 @@
 }
 
 #noteList {
-    padding: 0.5rem;
+    padding: 0.5rem 0;
+    max-height: 80vh;
+    overflow: auto;
     h2 {
-        margin: 0;
+        margin: 0 0.5rem;
     }
     nav {
         display: flex;
         flex-direction: column;
         a {
+            display: block;
+            position: relative;
+            &:hover,
+            &.active {
+                &::before {
+                    content: " ";
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    bottom: 0;
+                    left: 0;
+                    display: block;
+                    background: #e7e7e7;
+                    filter: blur(2px);
+                    z-index: -1;
+                }
+            }
             color: black;
+            border-top: 1px dotted #c7c7c7;
+            padding: 0.25rem 0.5rem 0.25rem 0.5rem;
             text-decoration: none;
-            padding: 0.5rem 0 0 0;
             // white-space: nowrap;
             &.active {
-                font-weight: bold;
+                text-shadow: 0 0 1px black;
             }
         }
     }
