--- a/client/src/components/notebook/Notebook.scss
+++ b/client/src/components/notebook/Notebook.scss
@@ -3,6 +3,7 @@
     max-width: 1025px;
     margin-left: auto;
     margin-right: auto;
+    font-family: "Inter", sans-serif;
     .notebook {
         display: flex;
         flex-direction: column;
@@ -14,9 +15,9 @@
 
         .wrapper {
             position: relative;
-            // border-top-right-radius: 1em;
-            // border-bottom-right-radius: 1em;
-            // border-bottom-left-radius: 1em;
+            border-top-right-radius: 1em;
+            border-bottom-right-radius: 1em;
+            border-bottom-left-radius: 1em;
             border: 1px solid #dfdfdf;
             background-color: #f0f0f0;
             height: 100%;
@@ -42,13 +43,18 @@
             .note-list {
                 position: absolute;
                 top: -1px;
-                right: calc(100% + 1px);
+                // left: calc(2em + -1 * (100vw - 100%) / 2);
+                // right: calc(100% + 1px);
+                // right: 0;
+                transform: translateX(calc(-100%));
                 border: solid #dfdfdf;
                 border-width: 1px 0 1px 1px;
                 border-top-left-radius: 1em;
                 border-bottom-left-radius: 1em;
-                width: 15em;
+                min-width: 10em;
+                max-width: calc((100vw - 100%) / 2 - 2em);
                 z-index: 1;
+                background-color: #f7f7f7;
             }
         }
     }
@@ -56,6 +62,16 @@
         max-width: unset;
         margin-left: unset;
         margin-right: unset;
+        .notebook .wrapper {
+            border-top-right-radius: unset;
+            border-bottom-right-radius: unset;
+            border-bottom-left-radius: unset;
+            .note-list {
+                min-width: unset;
+                max-width: unset;
+                // transform: unset !important;
+            }
+        }
     }
 }
 
