--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,5 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Shadows+Into+Light&family=Source+Code+Pro:wght@400;700&display=swap");
+
 body {
     margin: 0;
+    background-color: #d0d0d0;
 }
 
 @keyframes spinner-fadein {
